# lst-arb

./: .gitignore
lst-arb/: .gitignore  README.md
lst-arb/bot/: .gitignore  Cargo.toml  config.toml  dry_run.py  test_0x.py
lst-arb/bot/src/: config.rs  main.rs  scheduler.rs  watcher.rs
lst-arb/bot/src/detector/: mod.rs  solver.rs  spread.rs
lst-arb/bot/src/executor/: mod.rs
lst-arb/bot/src/monitor/: mod.rs
lst-arb/bot/src/price/: cache.rs  mod.rs  multicall.rs
lst-arb/bot/src/price/venues/: balancer.rs  curve.rs  mod.rs  uniswap.rs
lst-arb/bot/src/rpc/: client.rs
lst-arb/bot/src/scout/: mod.rs  safety.rs
lst-arb/bot/src/simulator/: mod.rs
lst-arb/contracts/: foundry.toml
lst-arb/contracts/cache/: solidity-files-cache.json
lst-arb/contracts/src/: LstArbitrage.sol
lst-arb/contracts/src/interfaces/: IBalancerVault.sol  ICurve.sol  IUniswapV3.sol
lst-arb/dashboard/: server.py
lst-arb/dashboard/templates/: index.html
lst-arb/scripts/: deploy.sh
