[package]
name = "lst-arb"
version = "0.1.0"
edition = "2021"

[dependencies]
# Ethereum (Arbitrum-compatible)
ethers = { version = "2.0", features = ["ws", "rustls", "abigen"] }
# Note: ethers-flashbots removed - Arbitrum uses FIFO sequencer, no MEV

# Async runtime
tokio = { version = "1.34", features = ["full", "rt-multi-thread", "macros", "sync", "time"] }
futures = "0.3"
async-trait = "0.1"

# Concurrency
dashmap = "5.5"
parking_lot = "0.12"
crossbeam = "0.8"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
eyre = "0.6"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
hex = "0.4"
dotenv = "0.15"
chrono = "0.4"
once_cell = "1.18"
rand = "0.8"

# HTTP for alerts
reqwest = { version = "0.11", features = ["json"] }

# Performance
mimalloc = { version = "0.1", default-features = false }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
